# DG_SLAM

./: .flake8  .gitignore  README.md  pyproject.toml
configs/: rgbd_dataset_freiburg3_walking_rpy.yaml
evaluation/experiments/density/: generate_density_masks.py.py  run_density_experiments.py.py
evaluation/experiments/robustness/: add_noise_to_masks.py  run_tum_frame_skip.py
evaluation/experiments/semantic/: generate_semantic_masks.py.py  run_tum_quick_with_seg.py  visualize_trajectory.py
scripts/: download_tum.sh
src/dg_slam/: camera_pose_estimation.py  coarse_tracker.py  depth_warp.py  fine_tracker.py  gaussian.py  gaussian_model.py  hybrid_slam.py  utils.py
src/dg_slam/gaussian/: common.py  eval.py  gaussian_render.py  general_utils.py  graphics_utils.py  logger.py
submodules/diff-gaussian-rasterization_pose/: README.md  rasterize_points.cu  rasterize_points.h  setup.py
submodules/diff-gaussian-rasterization_pose/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  rasterizer.h  rasterizer_impl.cu
submodules/diff-gaussian-rasterization_pose/diff_gaussian_rasterization_depth_pose/: __init__.py
tests/: README.md  test_camera_pose_estimation.py  test_depth_warp.py
