[project]
name = 'dg_slam'
version = '0.99'
description = 'Python library DG-SLAM implementation'
readme = 'README.md'
requires-python = '>=3.11'
# TODO: Remove PIL from imports, there is probably a faster way to decode Images
dependencies = ['numpy>=2.0.1', 'scipy>=1.16.3', 'pillow==11.0.0', 'scikit-image', 'matplotlib', 'mathutils']

[project.optional-dependencies]
dev = ['flake8', 'build']
test = ['parameterized~=0.9.0']

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']
